--- a/public/011-article.html
+++ b/public/011-article.html
@@ -748,6 +748,13 @@
 									<br/>
 									<!--br can be removed-->по подбору, уходу, сервису
 								</h1>
+									<ul>
+										<li>Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.</li>
+										<li>Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.</li>
+										<li>Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.</li>
+										<li>Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.</li>
+										<li>Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.</li>
+									</ul>
 								<div class="custom-list custom-list--plus">
 										<ul>
 											<li>Уменьшение расхода воды. При мытье посуды вручную за год тратится примерно на 7-8 тысяч литров больше, чем при эксплуатации посудомойки.</li>
