--- a/public/021-article-new.html
+++ b/public/021-article-new.html
@@ -746,6 +746,120 @@
 							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor repudiandae quas porro quisquam sapiente dolorum neque <a href="#">temporibus veritatis</a>, incidunt nihil voluptatibus quod odit eaque dolores dolorem et recusandae fuga excepturi quibusdam. Nemo architecto natus, labore cum tempora ipsam laboriosam atque.</p>
 							<h2>Самые лучшие модели нынешнего года</h2>
 							<p>На российском рынке представлены приборы разных производителей. Они выпускаются такими мировыми гигантами как Bosch, Teka, Midea, Smeg и прочими. Ниже рассмотрим самые популярные модели, входящие в топ лучших холодильников нынешнего года. Этот рейтинг составляли мастера и эксперты, оценивая основные характеристики и отзывы владельцев.</p>
+							<div>
+								<div class="bestArtical-item">
+									<div class="bestArtical-item__head">
+										<div class="row">
+											<div class="col">
+												<div class="bestArtical-item__title"><a href="#"> Midea MRB519SFNDX5</a>
+												</div>
+												<div class="bestArtical-item__price">49 990 руб.
+												</div>
+											</div>
+											<div class="bestArtical-item__col col-md-4 order-md-first">
+												<div class="bestArtical-item__left-block"><a class="bestArtical-item__img-wrap" href="#">
+													<!-- picture-->
+													<picture> 
+														<source type="image/avif" srcset="img/@2x/avif/artical-prod-1.avif"/>
+														<source type="image/webp" srcset="img/@2x/webp/artical-prod-1.webp"/><img src="img/@2x/artical-prod-1.png" alt="" loading="lazy"/>
+													</picture>
+													<!-- /picture--></a><a class="bestArtical-item__logo" href="#">
+													<!-- picture-->
+													<picture> 
+														<source type="image/avif" srcset="img/@2x/avif/artical-logo-1.avif"/>
+														<source type="image/webp" srcset="img/@2x/webp/artical-logo-1.webp"/><img src="img/@2x/artical-logo-1.png" alt="" loading="lazy"/>
+													</picture>
+													<!-- /picture--></a>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="bestArtical-item__body">
+										<div class="row">
+											<div class="col-md-4"></div>
+											<div class="col">
+												<div class="bestArtical-item__content">
+													<p>Это двухкамерный холодильник с хорошим полезным объёмом, электронным управлением, одним компрессором.</p>
+													<div class="custom-list custom-list--plus">
+														<p>Рассмотрим плюсы:</p>
+														<ul>
+															<li>незначительный шум – 41 дБ;</li>
+															<li>система разморозки Full No Frost;</li>
+															<li>сенсорное понятное управление с ярким дисплеем;</li>
+															<li>наличие зоны свежести;</li>
+															<li>индикация включения, открытой дверцы, температур, включения;</li>
+															<li>яркое освещение;</li>
+															<li>точные регулировки температур для морозильной/холодильной камер.</li>
+														</ul>
+													</div>
+													<div class="custom-list custom-list--minus">
+														<p>Минусы:</p>
+														<ul> 
+															<li>разморозка: ручная для морозилки, капельная – для холодильной камеры.</li>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="bestArtical-item">
+									<div class="bestArtical-item__head">
+										<div class="row">
+											<div class="col">
+												<div class="bestArtical-item__title"><a href="#"> Midea MRB519SFNDX5</a>
+												</div>
+												<div class="bestArtical-item__price">49 990 руб.
+												</div>
+											</div>
+											<div class="bestArtical-item__col col-md-4 order-md-first">
+												<div class="bestArtical-item__left-block"><a class="bestArtical-item__img-wrap" href="#">
+													<!-- picture-->
+													<picture> 
+														<source type="image/avif" srcset="img/@2x/avif/artical-prod-2.avif"/>
+														<source type="image/webp" srcset="img/@2x/webp/artical-prod-2.webp"/><img src="img/@2x/artical-prod-2.png" alt="" loading="lazy"/>
+													</picture>
+													<!-- /picture--></a><a class="bestArtical-item__logo" href="#">
+													<!-- picture-->
+													<picture> 
+														<source type="image/avif" srcset="img/@2x/avif/artical-logo-2.avif"/>
+														<source type="image/webp" srcset="img/@2x/webp/artical-logo-2.webp"/><img src="img/@2x/artical-logo-2.png" alt="" loading="lazy"/>
+													</picture>
+													<!-- /picture--></a>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="bestArtical-item__body">
+										<div class="row">
+											<div class="col-md-4"></div>
+											<div class="col">
+												<div class="bestArtical-item__content">
+													<p>Это двухкамерный холодильник с хорошим полезным объёмом, электронным управлением, одним компрессором.</p>
+													<div class="custom-list custom-list--plus">
+														<p>Рассмотрим плюсы:</p>
+														<ul>
+															<li>незначительный шум – 41 дБ;</li>
+															<li>система разморозки Full No Frost;</li>
+															<li>сенсорное понятное управление с ярким дисплеем;</li>
+															<li>наличие зоны свежести;</li>
+															<li>индикация включения, открытой дверцы, температур, включения;</li>
+															<li>яркое освещение;</li>
+															<li>точные регулировки температур для морозильной/холодильной камер.</li>
+														</ul>
+													</div>
+													<div class="custom-list custom-list--minus">
+														<p>Минусы:</p>
+														<ul> 
+															<li>разморозка: ручная для морозилки, капельная – для холодильной камеры.</li>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
