--- a/public/020-landing.html
+++ b/public/020-landing.html
@@ -1329,10 +1329,12 @@
 			<section class="sBaner section" id="sBaner">
 				<!-- picture-->
 				<picture class="sBaner__bg"> 
+					<source type="image/avif" srcset="img/@2x/avif/sBaner-bg.avif" media="(min-width:576px)"/>
+					<source type="image/avif" srcset="img/@1x/avif/sBaner-bg.avif"/>
 					<source type="image/webp" srcset="img/@2x/webp/sBaner-bg.webp" media="(min-width:576px)"/>
 					<source type="image/webp" srcset="img/@1x/webp/sBaner-bg.webp"/>
-					<source type="image/jpg" srcset="img/@2x/sBaner-bg.jpg" media="(min-width:576px)"/>
-					<source type="image/jpg" srcset="img/@1x/sBaner-bg.jpg"/><img src="img/@2x/sBaner-bg.jpg" alt="" loading="lazy"/>
+					<source type="image/jpg" srcset="img/@2x/avif/sBaner-bg.jpg" media="(min-width:576px)"/>
+					<source type="image/jpg" srcset="img/@1x/avif/sBaner-bg.jpg"/><img src="img/@2x/sBaner-bg.jpg" alt="" loading="lazy"/>
 				</picture>
 				<!-- /picture-->
 				<div class="sBaner__container container">
@@ -1356,10 +1358,12 @@
 								<div class="sDescr__col sDescr__col--left col-lg-auto">
 									<!-- picture-->
 									<picture class="sDescr__img"> 
+										<source type="image/avif" srcset="img/@2x/avif/sDescr.avif" media="(min-width:576px)"/>
+										<source type="image/avif" srcset="img/@1x/avif/sDescr.avif"/>
 										<source type="image/webp" srcset="img/@2x/webp/sDescr.webp" media="(min-width:576px)"/>
 										<source type="image/webp" srcset="img/@1x/webp/sDescr.webp"/>
-										<source type="image/png" srcset="img/@2x/sDescr.png" media="(min-width:576px)"/>
-										<source type="image/png" srcset="img/@1x/sDescr.png"/><img src="img/@2x/sDescr.png" alt="" loading="lazy"/>
+										<source type="image/png" srcset="img/@2x/avif/sDescr.png" media="(min-width:576px)"/>
+										<source type="image/png" srcset="img/@1x/avif/sDescr.png"/><img src="img/@2x/sDescr.png" alt="" loading="lazy"/>
 									</picture>
 									<!-- /picture-->
 								</div>
@@ -1397,6 +1401,7 @@
 							<div class="sOffer__item" style="background-color: #ACB9C0; color: #131313;">
 								<!-- picture-->
 								<picture class="sOffer__img"> 
+									<source type="image/avif" srcset="img/@2x/avif/sOffer-img-1.avif"/>
 									<source type="image/webp" srcset="img/@2x/webp/sOffer-img-1.webp"/><img src="img/@2x/sOffer-img-1.png" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
@@ -1409,6 +1414,7 @@
 							<div class="sOffer__item" style="background-color: #DFD1CC; color: #131313;">
 								<!-- picture-->
 								<picture class="sOffer__img"> 
+									<source type="image/avif" srcset="img/@2x/avif/sOffer-img-2.avif"/>
 									<source type="image/webp" srcset="img/@2x/webp/sOffer-img-2.webp"/><img src="img/@2x/sOffer-img-2.png" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
@@ -1422,6 +1428,7 @@
 							<div class="sOffer__item" style="background-color: #717171; color: white;">
 								<!-- picture-->
 								<picture class="sOffer__img"> 
+									<source type="image/avif" srcset="img/@2x/avif/sOffer-img-3.avif"/>
 									<source type="image/webp" srcset="img/@2x/webp/sOffer-img-3.webp"/><img src="img/@2x/sOffer-img-3.png" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
@@ -1505,10 +1512,12 @@
 						<div class="sTime__col sTime__col--common col-sm-5 col-md-6 col-lg-4">
 							<!-- picture-->
 							<picture class="sTime__img"> 
+								<source type="image/avif" srcset="img/@2x/avif/sTime-card-img-2.avif" media="(min-width:576px)"/>
+								<source type="image/avif" srcset="img/@1x/avif/sTime-card-img-2.avif"/>
 								<source type="image/webp" srcset="img/@2x/webp/sTime-card-img-2.webp" media="(min-width:576px)"/>
 								<source type="image/webp" srcset="img/@1x/webp/sTime-card-img-2.webp"/>
-								<source type="image/png" srcset="img/@2x/sTime-card-img-2.png" media="(min-width:576px)"/>
-								<source type="image/png" srcset="img/@1x/sTime-card-img-2.png"/><img src="img/@2x/sTime-card-img-2.png" alt="" loading="lazy"/>
+								<source type="image/png" srcset="img/@2x/avif/sTime-card-img-2.png" media="(min-width:576px)"/>
+								<source type="image/png" srcset="img/@1x/avif/sTime-card-img-2.png"/><img src="img/@2x/sTime-card-img-2.png" alt="" loading="lazy"/>
 							</picture>
 							<!-- /picture-->
 						</div>
@@ -1529,10 +1538,12 @@
 						<div class="sTime__col sTime__col--common col-sm-5 col-md-6 col-lg-4">
 							<!-- picture-->
 							<picture class="sTime__img sTime__img--top"> 
+								<source type="image/avif" srcset="img/@2x/avif/sTime-card-img-1.avif" media="(min-width:576px)"/>
+								<source type="image/avif" srcset="img/@1x/avif/sTime-card-img-1.avif"/>
 								<source type="image/webp" srcset="img/@2x/webp/sTime-card-img-1.webp" media="(min-width:576px)"/>
 								<source type="image/webp" srcset="img/@1x/webp/sTime-card-img-1.webp"/>
-								<source type="image/png" srcset="img/@2x/sTime-card-img-1.png" media="(min-width:576px)"/>
-								<source type="image/png" srcset="img/@1x/sTime-card-img-1.png"/><img src="img/@2x/sTime-card-img-1.png" alt="" loading="lazy"/>
+								<source type="image/png" srcset="img/@2x/avif/sTime-card-img-1.png" media="(min-width:576px)"/>
+								<source type="image/png" srcset="img/@1x/avif/sTime-card-img-1.png"/><img src="img/@2x/sTime-card-img-1.png" alt="" loading="lazy"/>
 							</picture>
 							<!-- /picture-->
 						</div>
@@ -1630,10 +1641,12 @@
 								</div>
 								<!-- picture-->
 								<picture class="sTime__b-img"> 
+									<source type="image/avif" srcset="img/@2x/avif/sTime-b-img.avif" media="(min-width:576px)"/>
+									<source type="image/avif" srcset="img/@1x/avif/sTime-b-img.avif"/>
 									<source type="image/webp" srcset="img/@2x/webp/sTime-b-img.webp" media="(min-width:576px)"/>
 									<source type="image/webp" srcset="img/@1x/webp/sTime-b-img.webp"/>
-									<source type="image/png" srcset="img/@2x/sTime-b-img.png" media="(min-width:576px)"/>
-									<source type="image/png" srcset="img/@1x/sTime-b-img.png"/><img src="img/@2x/sTime-b-img.png" alt="" loading="lazy"/>
+									<source type="image/png" srcset="img/@2x/avif/sTime-b-img.png" media="(min-width:576px)"/>
+									<source type="image/png" srcset="img/@1x/avif/sTime-b-img.png"/><img src="img/@2x/sTime-b-img.png" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
 								<div class="sTime__b-foot">
@@ -1681,50 +1694,60 @@
 								<div class="swiper-slide">
 									<!-- picture-->
 									<picture class="sExample__img"> 
+										<source type="image/avif" srcset="img/@2x/avif/sExample-slide-1.avif" media="(min-width:576px)"/>
+										<source type="image/avif" srcset="img/@1x/avif/sExample-slide-1.avif"/>
 										<source type="image/webp" srcset="img/@2x/webp/sExample-slide-1.webp" media="(min-width:576px)"/>
 										<source type="image/webp" srcset="img/@1x/webp/sExample-slide-1.webp"/>
-										<source type="image/png" srcset="img/@2x/sExample-slide-1.png" media="(min-width:576px)"/>
-										<source type="image/png" srcset="img/@1x/sExample-slide-1.png"/><img src="img/@2x/sExample-slide-1.png" alt="" loading="lazy"/>
+										<source type="image/png" srcset="img/@2x/avif/sExample-slide-1.png" media="(min-width:576px)"/>
+										<source type="image/png" srcset="img/@1x/avif/sExample-slide-1.png"/><img src="img/@2x/sExample-slide-1.png" alt="" loading="lazy"/>
 									</picture>
 									<!-- /picture-->
 								</div>
 								<div class="swiper-slide">
 									<!-- picture-->
 									<picture class="sExample__img"> 
+										<source type="image/avif" srcset="img/@2x/avif/sExample-slide-2.avif" media="(min-width:576px)"/>
+										<source type="image/avif" srcset="img/@1x/avif/sExample-slide-2.avif"/>
 										<source type="image/webp" srcset="img/@2x/webp/sExample-slide-2.webp" media="(min-width:576px)"/>
 										<source type="image/webp" srcset="img/@1x/webp/sExample-slide-2.webp"/>
-										<source type="image/png" srcset="img/@2x/sExample-slide-2.png" media="(min-width:576px)"/>
-										<source type="image/png" srcset="img/@1x/sExample-slide-2.png"/><img src="img/@2x/sExample-slide-2.png" alt="" loading="lazy"/>
+										<source type="image/png" srcset="img/@2x/avif/sExample-slide-2.png" media="(min-width:576px)"/>
+										<source type="image/png" srcset="img/@1x/avif/sExample-slide-2.png"/><img src="img/@2x/sExample-slide-2.png" alt="" loading="lazy"/>
 									</picture>
 									<!-- /picture-->
 								</div>
 								<div class="swiper-slide">
 									<!-- picture-->
 									<picture class="sExample__img"> 
+										<source type="image/avif" srcset="img/@2x/avif/sExample-slide-3.avif" media="(min-width:576px)"/>
+										<source type="image/avif" srcset="img/@1x/avif/sExample-slide-3.avif"/>
 										<source type="image/webp" srcset="img/@2x/webp/sExample-slide-3.webp" media="(min-width:576px)"/>
 										<source type="image/webp" srcset="img/@1x/webp/sExample-slide-3.webp"/>
-										<source type="image/png" srcset="img/@2x/sExample-slide-3.png" media="(min-width:576px)"/>
-										<source type="image/png" srcset="img/@1x/sExample-slide-3.png"/><img src="img/@2x/sExample-slide-3.png" alt="" loading="lazy"/>
+										<source type="image/png" srcset="img/@2x/avif/sExample-slide-3.png" media="(min-width:576px)"/>
+										<source type="image/png" srcset="img/@1x/avif/sExample-slide-3.png"/><img src="img/@2x/sExample-slide-3.png" alt="" loading="lazy"/>
 									</picture>
 									<!-- /picture-->
 								</div>
 								<div class="swiper-slide">
 									<!-- picture-->
 									<picture class="sExample__img"> 
+										<source type="image/avif" srcset="img/@2x/avif/sExample-slide-3.avif" media="(min-width:576px)"/>
+										<source type="image/avif" srcset="img/@1x/avif/sExample-slide-3.avif"/>
 										<source type="image/webp" srcset="img/@2x/webp/sExample-slide-3.webp" media="(min-width:576px)"/>
 										<source type="image/webp" srcset="img/@1x/webp/sExample-slide-3.webp"/>
-										<source type="image/png" srcset="img/@2x/sExample-slide-3.png" media="(min-width:576px)"/>
-										<source type="image/png" srcset="img/@1x/sExample-slide-3.png"/><img src="img/@2x/sExample-slide-3.png" alt="" loading="lazy"/>
+										<source type="image/png" srcset="img/@2x/avif/sExample-slide-3.png" media="(min-width:576px)"/>
+										<source type="image/png" srcset="img/@1x/avif/sExample-slide-3.png"/><img src="img/@2x/sExample-slide-3.png" alt="" loading="lazy"/>
 									</picture>
 									<!-- /picture-->
 								</div>
 								<div class="swiper-slide">
 									<!-- picture-->
 									<picture class="sExample__img"> 
+										<source type="image/avif" srcset="img/@2x/avif/sExample-slide-3.avif" media="(min-width:576px)"/>
+										<source type="image/avif" srcset="img/@1x/avif/sExample-slide-3.avif"/>
 										<source type="image/webp" srcset="img/@2x/webp/sExample-slide-3.webp" media="(min-width:576px)"/>
 										<source type="image/webp" srcset="img/@1x/webp/sExample-slide-3.webp"/>
-										<source type="image/png" srcset="img/@2x/sExample-slide-3.png" media="(min-width:576px)"/>
-										<source type="image/png" srcset="img/@1x/sExample-slide-3.png"/><img src="img/@2x/sExample-slide-3.png" alt="" loading="lazy"/>
+										<source type="image/png" srcset="img/@2x/avif/sExample-slide-3.png" media="(min-width:576px)"/>
+										<source type="image/png" srcset="img/@1x/avif/sExample-slide-3.png"/><img src="img/@2x/sExample-slide-3.png" alt="" loading="lazy"/>
 									</picture>
 									<!-- /picture-->
 								</div>
@@ -2248,6 +2271,7 @@
 							</div>
 							<!-- picture-->
 							<picture class="sForm__pic"> 
+								<source type="image/avif" srcset="img/@2x/avif/landForm-img.avif"/>
 								<source type="image/webp" srcset="img/@2x/webp/landForm-img.webp"/><img src="img/@2x/landForm-img.png" alt="" loading="lazy"/>
 							</picture>
 							<!-- /picture-->
