--- a/public/021-article-new.html
+++ b/public/021-article-new.html
@@ -739,6 +739,76 @@
 									</div>
 									<div class="sArtical__c-item"><a class="sArtical__main-link" href="#">Заключение</a>
 									</div>
+									<div class="sArtical__c-item"><a class="sArtical__main-link" href="#">Популярные модели</a>
+										<ul>
+											<li><a href="#">Huter GGD-52</a></li>
+											<li><a href="#">Калибр БС-1650</a></li>
+											<li><a href="#">FUBAG FPB 52</a></li>
+											<li><a href="#">Champion AG243</a></li>
+										</ul>
+									</div>
+									<div class="sArtical__c-item"><a class="sArtical__main-link" href="#">Заключение</a>
+									</div>
+									<div class="sArtical__c-item"><a class="sArtical__main-link" href="#">Популярные модели</a>
+										<ul>
+											<li><a href="#">Huter GGD-52</a></li>
+											<li><a href="#">Калибр БС-1650</a></li>
+											<li><a href="#">FUBAG FPB 52</a></li>
+											<li><a href="#">Champion AG243</a></li>
+										</ul>
+									</div>
+									<div class="sArtical__c-item"><a class="sArtical__main-link" href="#">Заключение</a>
+									</div>
+									<div class="sArtical__c-item"><a class="sArtical__main-link" href="#">Популярные модели</a>
+										<ul>
+											<li><a href="#">Huter GGD-52</a></li>
+											<li><a href="#">Калибр БС-1650</a></li>
+											<li><a href="#">FUBAG FPB 52</a></li>
+											<li><a href="#">Champion AG243</a></li>
+										</ul>
+									</div>
+									<div class="sArtical__c-item"><a class="sArtical__main-link" href="#">Заключение</a>
+									</div>
+									<div class="sArtical__c-item"><a class="sArtical__main-link" href="#">Популярные модели</a>
+										<ul>
+											<li><a href="#">Huter GGD-52</a></li>
+											<li><a href="#">Калибр БС-1650</a></li>
+											<li><a href="#">FUBAG FPB 52</a></li>
+											<li><a href="#">Champion AG243</a></li>
+										</ul>
+									</div>
+									<div class="sArtical__c-item"><a class="sArtical__main-link" href="#">Заключение</a>
+									</div>
+									<div class="sArtical__c-item"><a class="sArtical__main-link" href="#">Популярные модели</a>
+										<ul>
+											<li><a href="#">Huter GGD-52</a></li>
+											<li><a href="#">Калибр БС-1650</a></li>
+											<li><a href="#">FUBAG FPB 52</a></li>
+											<li><a href="#">Champion AG243</a></li>
+										</ul>
+									</div>
+									<div class="sArtical__c-item"><a class="sArtical__main-link" href="#">Заключение</a>
+									</div>
+									<div class="sArtical__c-item"><a class="sArtical__main-link" href="#">Популярные модели</a>
+										<ul>
+											<li><a href="#">Huter GGD-52</a></li>
+											<li><a href="#">Калибр БС-1650</a></li>
+											<li><a href="#">FUBAG FPB 52</a></li>
+											<li><a href="#">Champion AG243</a></li>
+										</ul>
+									</div>
+									<div class="sArtical__c-item"><a class="sArtical__main-link" href="#">Заключение</a>
+									</div>
+									<div class="sArtical__c-item"><a class="sArtical__main-link" href="#">Популярные модели</a>
+										<ul>
+											<li><a href="#">Huter GGD-52</a></li>
+											<li><a href="#">Калибр БС-1650</a></li>
+											<li><a href="#">FUBAG FPB 52</a></li>
+											<li><a href="#">Champion AG243</a></li>
+										</ul>
+									</div>
+									<div class="sArtical__c-item"><a class="sArtical__main-link" href="#">Заключение</a>
+									</div>
 								</div>
 							</div>
 						</div>
