done connection-of-equipment & edit service-center

--- a/public/023-service-center.html
+++ b/public/023-service-center.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>title</title>
+		<title>Сервисные центры</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -699,189 +699,29 @@
 					<nav>
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="/"><span>Главная</span></a></li>
-							<li class="breadcrumb-item active"><a href="#"><span>Подключение техники</span></a></li>
+							<li class="breadcrumb-item active"><a href="#"><span>Сервисные центры</span></a></li>
 						</ol>
 					</nav>
-					<h2>Подключение техники</h2>
+					<h2>Сервисные центры</h2>
 				</div>
 			</div>
-			<!-- start sConnectionHead-->
-			<section class="sConnectionHead bg-wrap" id="sConnectionHead">
+			<!-- start sServiceCenterHead-->
+			<section class="sServiceCenterHead bg-wrap" id="sServiceCenterHead">
 				<!-- picture-->
 				<picture class="picture-bg"> 
-					<source type="image/avif" srcset="img/@2x/avif/сonnectionHead-bg.avif" media="(min-width:576px)"/>
-					<source type="image/avif" srcset="img/@1x/avif/сonnectionHead-bg.avif"/>
-					<source type="image/webp" srcset="img/@2x/webp/сonnectionHead-bg.webp" media="(min-width:576px)"/>
-					<source type="image/webp" srcset="img/@1x/webp/сonnectionHead-bg.webp"/>
-					<source type="image/jpg" srcset="img/@2x/avif/сonnectionHead-bg.jpg" media="(min-width:576px)"/>
-					<source type="image/jpg" srcset="img/@1x/avif/сonnectionHead-bg.jpg"/><img class="object-fit-js" src="img/@2x/сonnectionHead-bg.jpg" alt="" loading="lazy"/>
+					<source type="image/avif" srcset="img/@2x/avif/service-center-bg.avif" media="(min-width:576px)"/>
+					<source type="image/avif" srcset="img/@1x/avif/service-center-bg.avif"/>
+					<source type="image/webp" srcset="img/@2x/webp/service-center-bg.webp" media="(min-width:576px)"/>
+					<source type="image/webp" srcset="img/@1x/webp/service-center-bg.webp"/>
+					<source type="image/jpg" srcset="img/@2x/avif/service-center-bg.jpg" media="(min-width:576px)"/>
+					<source type="image/jpg" srcset="img/@1x/avif/service-center-bg.jpg"/><img class="object-fit-js" src="img/@2x/service-center-bg.jpg" alt="" loading="lazy"/>
 				</picture>
 				<!-- /picture-->
-				<div class="container">
-					<div class="sConnectionHead__inner section">
-						<h1>Вся техника, представленная в&nbsp;нашем магазине, подключается на&nbsp;готовые коммуникации бесплатно*!</h1>
-					</div>
+				<div class="sServiceCenterHead__inner section">
+					<div class="container"></div>
 				</div>
 			</section>
-			<!-- end sConnectionHead-->
-			<!-- start sWhatWeDo-->
-			<div class="sWhatWeDo section bg-wrap" id="sWhatWeDo">
-				<!-- picture-->
-				<picture class="picture-bg"> 
-					<source type="image/avif" srcset="img/@2x/avif/sWhatWeDo-bg.avif" media="(min-width:576px)"/>
-					<source type="image/avif" srcset="img/@1x/avif/sWhatWeDo-bg.avif"/>
-					<source type="image/webp" srcset="img/@2x/webp/sWhatWeDo-bg.webp" media="(min-width:576px)"/>
-					<source type="image/webp" srcset="img/@1x/webp/sWhatWeDo-bg.webp"/>
-					<source type="image/jpg" srcset="img/@2x/avif/sWhatWeDo-bg.jpg" media="(min-width:576px)"/>
-					<source type="image/jpg" srcset="img/@1x/avif/sWhatWeDo-bg.jpg"/><img class="object-fit-js" src="img/@2x/sWhatWeDo-bg.jpg" alt="" loading="lazy"/>
-				</picture>
-				<!-- /picture-->
-				<div class="container">
-					<div class="row">
-						<div class="col-12 col-md-6 col-xl-4">
-							<div class="whatWeDoCard">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/whatWeDoCard-1.avif" media="(min-width:576px)"/>
-									<source type="image/avif" srcset="img/@1x/avif/whatWeDoCard-1.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/whatWeDoCard-1.webp" media="(min-width:576px)"/>
-									<source type="image/webp" srcset="img/@1x/webp/whatWeDoCard-1.webp"/>
-									<source type="image/jpg" srcset="img/@2x/avif/whatWeDoCard-1.jpg" media="(min-width:576px)"/>
-									<source type="image/jpg" srcset="img/@1x/avif/whatWeDoCard-1.jpg"/><img src="img/@2x/whatWeDoCard-1.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<div class="whatWeDoCard__text-wrap">
-									<p>Работы по&nbsp;подключению выполняют наши мастера или партнёрский сервис</p>
-								</div>
-								<div class="whatWeDoCard__icon">
-									<svg class="icon icon-tool ">
-										<use xlink:href="img/svg/sprite.svg#tool"></use>
-									</svg>
-								</div>
-							</div>
-						</div>
-						<div class="col-12 col-md-6 col-xl-4">
-							<div class="whatWeDoCard">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/whatWeDoCard-2.avif" media="(min-width:576px)"/>
-									<source type="image/avif" srcset="img/@1x/avif/whatWeDoCard-2.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/whatWeDoCard-2.webp" media="(min-width:576px)"/>
-									<source type="image/webp" srcset="img/@1x/webp/whatWeDoCard-2.webp"/>
-									<source type="image/jpg" srcset="img/@2x/avif/whatWeDoCard-2.jpg" media="(min-width:576px)"/>
-									<source type="image/jpg" srcset="img/@1x/avif/whatWeDoCard-2.jpg"/><img src="img/@2x/whatWeDoCard-2.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<div class="whatWeDoCard__text-wrap">
-									<p>Демонтаж старой техники в&nbsp;стоимость услуг не&nbsp;входит и&nbsp;оплачивается отдельно</p>
-								</div>
-								<div class="whatWeDoCard__icon">
-									<svg class="icon icon-tool-2 ">
-										<use xlink:href="img/svg/sprite.svg#tool-2"></use>
-									</svg>
-								</div>
-							</div>
-						</div>
-						<div class="sWhatWeDo__col col-12 col-xl-4">
-							<p class="sWhatWeDo__text">Для того, чтобы избавить вас, наших клиентов, от&nbsp;излишних затрат времени и&nbsp;денег, мы&nbsp;предоставляем услуги подключения техники, приобретённой<br>у&nbsp;нас в&nbsp;интернет-магазине или шоу-руме, на&nbsp;готовые коммуникации абсолютно <span>бесплатно!</span>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- end sWhatWeDo-->
-			<!-- start sDisposal-->
-			<div class="sDisposal section" id="sDisposal">
-				<div class="container">
-					<div class="row">
-						<div class="col-12 col-lg-7">
-							<div class="sDisposal__card">
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/disposal-bg.avif" media="(min-width:576px)"/>
-									<source type="image/avif" srcset="img/@1x/avif/disposal-bg.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/disposal-bg.webp" media="(min-width:576px)"/>
-									<source type="image/webp" srcset="img/@1x/webp/disposal-bg.webp"/>
-									<source type="image/jpg" srcset="img/@2x/avif/disposal-bg.jpg" media="(min-width:576px)"/>
-									<source type="image/jpg" srcset="img/@1x/avif/disposal-bg.jpg"/><img class="object-fit-js" src="img/@2x/disposal-bg.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-								<div class="sDisposal__wrap">
-									<div class="sDisposal__text">
-										<h4>Утилизация старой техники может быть произведена бесплатно.</h4>
-										<p>Подробности на&nbsp;странице акции &laquo;Утилизация техники&raquo;.</p>
-									</div>
-									<svg class="icon icon-recycle ">
-										<use xlink:href="img/svg/sprite.svg#recycle"></use>
-									</svg>
-								</div>
-							</div>
-							<p>* Подробности узнавайте у&nbsp;консультантов. Акция распространяется на&nbsp;выделенные бренды.</p>
-						</div>
-						<div class="col">
-							<div class="sDisposal__condition">
-								<p>Вызов специалистов можно заказать у наших менеджеров по телефону</p><a href="tel:+74957758272">+7 495 775-82-72</a>
-								<svg class="icon icon-call ">
-									<use xlink:href="img/svg/sprite.svg#call"></use>
-								</svg>
-							</div>
-							<div class="sDisposal__condition">
-								<p>Дата и&nbsp;время установки можно согласовать при оформлении заказа.</p>
-								<svg class="icon icon-clock ">
-									<use xlink:href="img/svg/sprite.svg#clock"></use>
-								</svg>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- end sDisposal-->
-			<!-- start sForm-->
-			<section class="sForm section">
-				<div class="container">
-					<div class="sForm__box">
-						<div class="sForm__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
-						</div>
-						<div class="section-title">
-							<h2>Хотите связаться с нами и что-то предложить?</h2>
-							<p>Заполните форму обратной связи, напишите ваше мнение. Мы ответим вам на указанную почту</p>
-						</div>
-						<div class="form-wrap">
-							<form>
-								<div class="form-wrap__row row">
-									<div class="form-wrap__left-col col-lg-auto">
-										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше имя"/>
-										</div>
-										<!-- +e.input-wrap-->
-										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="email" type="email" placeholder="Ваша электронная почта"/>
-										</div>
-										<!-- +e.input-wrap-->
-									</div>
-									<div class="col-lg">
-										<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control" name="textarea" placeholder="Ваш комментарий"></textarea>
-										</div>
-										<!-- +e.input-wrap-->
-									</div>
-									<div class="col-12 m-0"></div>
-									<div class="form-wrap__left-col col-lg-auto">
-										<button class="form-wrap__btn" type="submit">написать нам
-										</button>
-									</div>
-									<div class="col-lg">
-										<div class="form-wrap__policy">
-											<div class="form-wrap__p-txt">
-												Мы безопасно храним данные и никому их не передаём, вот
-												<a href="#">условия.</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- end sForm-->
+			<!-- end sServiceCenterHead-->
 			<footer class="footer footer-dd-items-js">
 				<div class="footer__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
 				</div>
