done 023-service-center

--- a/public/023-service-center.html
+++ b/public/023-service-center.html
@@ -718,10 +718,149 @@
 				</picture>
 				<!-- /picture-->
 				<div class="sServiceCenterHead__inner section">
-					<div class="container"></div>
+					<div class="sServiceCenterHead__container container">
+						<div class="dropdown"> 
+							<button class="sServiceCenterHead__btn">Все бренды
+								<svg class="icon icon-chevron-down ">
+									<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+								</svg>
+							</button>
+							<div class="dropdown-menu"><a class="dropdown-item" href="#">AEG</a><a class="dropdown-item" href="#">Asko</a><a class="dropdown-item" href="#">Blanco</a><a class="dropdown-item" href="#">Dometic</a></div>
+						</div>
+						<div class="form-wrap">
+							<form>
+								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Поиск"/>
+								</div>
+								<!-- +e.input-wrap-->
+								<button>
+									<svg class="icon icon-zoom ">
+										<use xlink:href="img/svg/sprite.svg#zoom"></use>
+									</svg>
+								</button>
+							</form>
+						</div>
+					</div>
 				</div>
 			</section>
 			<!-- end sServiceCenterHead-->
+			<!-- start sServicesList-->
+			<section class="sServicesList section bg-wrap" id="sServicesList">
+				<!-- picture-->
+				<picture class="picture-bg"> 
+					<source type="image/avif" srcset="img/@2x/avif/sWhatWeDo-bg.avif" media="(min-width:576px)"/>
+					<source type="image/avif" srcset="img/@1x/avif/sWhatWeDo-bg.avif"/>
+					<source type="image/webp" srcset="img/@2x/webp/sWhatWeDo-bg.webp" media="(min-width:576px)"/>
+					<source type="image/webp" srcset="img/@1x/webp/sWhatWeDo-bg.webp"/>
+					<source type="image/jpg" srcset="img/@2x/avif/sWhatWeDo-bg.jpg" media="(min-width:576px)"/>
+					<source type="image/jpg" srcset="img/@1x/avif/sWhatWeDo-bg.jpg"/><img class="object-fit-js" src="img/@2x/sWhatWeDo-bg.jpg" alt="" loading="lazy"/>
+				</picture>
+				<!-- /picture-->
+				<div class="container">
+					<div class="row">
+						<div class="col-12 col-xl-6">
+							<div class="sServicesList__card sServicesList__card--indent">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/servicesCard-bg-1.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/servicesCard-bg-1.webp"/><img src="img/@2x/servicesCard-bg-1.png" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="sServicesList__wrap">
+									<div class="sServicesList__content">
+										<svg class="icon icon-service ">
+											<use xlink:href="img/svg/sprite.svg#service"></use>
+										</svg>
+										<h5>Cписок авторизованных сервисов</h5><a href="https://www.aeg.ru/support/find-a-service-centre/">https://www.aeg.ru/support/find-a-service-centre/</a>
+									</div>
+									<div class="sServicesList__content">
+										<svg class="icon icon-phone ">
+											<use xlink:href="img/svg/sprite.svg#phone"></use>
+										</svg>
+										<h5>Телефон &laquo;горячей линии&raquo; AEG</h5><a class="sServicesList__number" href="tel:+88004444448">8 (800) 444-444-8</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-12 col-xl-6">
+							<div class="sServicesList__card">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/servicesCard-bg-2.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/servicesCard-bg-2.webp"/><img src="img/@2x/servicesCard-bg-2.png" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="sServicesList__wrap">
+									<div class="sServicesList__content">
+										<svg class="icon icon-service ">
+											<use xlink:href="img/svg/sprite.svg#service"></use>
+										</svg>
+										<h5>Cписок авторизованных сервисов</h5><a href="https://ru.asko.com/service-home-appliances">https://ru.asko.com/service-home-appliances</a>
+									</div>
+									<div class="sServicesList__content">
+										<svg class="icon icon-phone ">
+											<use xlink:href="img/svg/sprite.svg#phone"></use>
+										</svg>
+										<h5>Телефон &laquo;горячей линии&raquo; Asko</h5><a class="sServicesList__number" href="tel:+88007070807">8 (800) 707-08-07</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-12 col-xl-6">
+							<div class="sServicesList__card">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/servicesCard-bg-3.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/servicesCard-bg-3.webp"/><img src="img/@2x/servicesCard-bg-3.png" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="sServicesList__wrap">
+									<div class="sServicesList__content">
+										<svg class="icon icon-service ">
+											<use xlink:href="img/svg/sprite.svg#service"></use>
+										</svg>
+										<h5>Cписок авторизованных сервисов</h5><a href="https://www.blanco.com/ru-ru/service/service-contacts/">https://www.blanco.com/ru-ru/service/service-contacts/</a>
+									</div>
+									<div class="sServicesList__content">
+										<svg class="icon icon-phone ">
+											<use xlink:href="img/svg/sprite.svg#phone"></use>
+										</svg>
+										<h5>Телефон &laquo;горячей линии&raquo; BLANCO</h5>
+										<div class="sServicesList__number-wrap"><a class="sServicesList__number" href="tel:+74952293015">+7 (495) 229-30-15 </a><a class="sServicesList__number" href="tel:+74956650232">+7 (495) 665-02-32</a><a class="sServicesList__number" href="tel:+74959169131">+7 (495) 916-91-31</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-12 col-xl-6">
+							<div class="sServicesList__card">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/servicesCard-bg-4.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/servicesCard-bg-4.webp"/><img src="img/@2x/servicesCard-bg-4.png" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="sServicesList__wrap">
+									<div class="sServicesList__content">
+										<svg class="icon icon-service ">
+											<use xlink:href="img/svg/sprite.svg#service"></use>
+										</svg>
+										<h5>Cписок авторизованных сервисов</h5><a href="https://www.dometic.com/ru-ru/home/ru/поиск-дилеров">https://www.dometic.com/ru-ru/home/ru/поиск-дилеров</a>
+									</div>
+									<div class="sServicesList__content">
+										<svg class="icon icon-phone ">
+											<use xlink:href="img/svg/sprite.svg#phone"></use>
+										</svg>
+										<h5>Телефон &laquo;горячей линии&raquo; Dometic</h5>
+										<div class="sServicesList__number-wrap"><a class="sServicesList__number" href="tel:+84957807939">8 (495) 780-79-39</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sServicesList-->
 			<footer class="footer footer-dd-items-js">
 				<div class="footer__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
 				</div>
