done 025-equipment-storage

--- a/public/024-contact-information.html
+++ b/public/024-contact-information.html
@@ -27,6 +27,17 @@
 					</ul>
 					<button class="catalog-btn catalog-btn-js mb-4" type="button"><span class="catalog-btn__c-img"><img loading="lazy" src="img/svg/catalog.svg" alt=""/></span><span>Каталог</span>
 					</button>
+					<div class="menu-mobile__workTime"><span>Время работы</span>
+						<svg class="icon icon-dots ">
+							<use xlink:href="img/svg/sprite.svg#dots"></use>
+						</svg>
+						<div class="menu-mobile__workTime-content">
+							<svg class="icon icon-alert ">
+								<use xlink:href="img/svg/sprite.svg#alert"></use>
+							</svg><span>Ежедневно: с 10 до 21</span>
+							<p>c 31 декабря по 2 января магазин не работает</p>
+						</div>
+					</div>
 					<div class="menu-mobile__address mb-4">ул.Складочная д.1, стр.9
 					</div>
 					<!--+topNavSearch('mb-4')--><a class="menu-mobile__tel" href="#">8 (800) 775-82-72</a><a class="menu-mobile__order-call link-modal-js" href="#modal-call">Заказать звонок</a>
@@ -71,6 +82,19 @@
 									<li class="menu-item"><a href="#">Доставка и оплата</a></li>
 									<li class="menu-item"><a href="#">Контакты</a></li>
 								</ul>
+							</div>
+							<div class="col-auto d-none d-xl-block">
+								<div class="topLine__workTime"><span>Время работы</span>
+									<svg class="icon icon-dots ">
+										<use xlink:href="img/svg/sprite.svg#dots"></use>
+									</svg>
+									<div class="topLine__workTime-content">
+										<svg class="icon icon-alert ">
+											<use xlink:href="img/svg/sprite.svg#alert"></use>
+										</svg><span>Ежедневно: с 10 до 21</span>
+										<p>c 31 декабря по 2 января магазин не работает</p>
+									</div>
+								</div>
 							</div>
 							<div class="col-auto">
 								<div class="topLine__address">ул.Складочная д.1, стр.9
@@ -706,6 +730,30 @@
 					<h2>Контактная информация</h2>
 				</div>
 			</div>
+			<!-- start sContactInfo-->
+			<div class="sContactInfo section" id="sContactInfo">
+				<div class="container">
+					<div class="row">
+						<div class="sContactInfo__bg bg-wrap col-lg-6">
+							<!-- picture-->
+							<picture class="picture-bg"> 
+								<source type="image/avif" srcset="img/@2x/avif/sContactInfo-bg.avif" media="(min-width:576px)"/>
+								<source type="image/avif" srcset="img/@1x/avif/sContactInfo-bg.avif"/>
+								<source type="image/webp" srcset="img/@2x/webp/sContactInfo-bg.webp" media="(min-width:576px)"/>
+								<source type="image/webp" srcset="img/@1x/webp/sContactInfo-bg.webp"/>
+								<source type="image/jpg" srcset="img/@2x/avif/sContactInfo-bg.jpg" media="(min-width:576px)"/>
+								<source type="image/jpg" srcset="img/@1x/avif/sContactInfo-bg.jpg"/><img src="img/@2x/sContactInfo-bg.jpg" alt="" loading="lazy"/>
+							</picture>
+							<!-- /picture-->
+						</div>
+						<div class="sContactInfo__col col-lg-6">
+							<div class="sContactInfo__wrap"><span>1</span><span>2</span><span>3</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- end sContactInfo-->
 			<!-- start sParking-->
 			<div class="sParking section" id="sParking">
 				<div class="sParking__about-parking bg-wrap">
@@ -789,7 +837,7 @@
 			<!-- start sParkingMap-->
 			<div class="sParkingMap section" id="sParkingMap">
 				<div class="sParkingMap__map">
-					<div id="map"></div><script src="https://api-maps.yandex.ru/2.0/?load=package.standard,package.geoObjects&amp;lang=ru-RU&amp;apikey="></script>
+					<div id="map"></div><script src="https://api-maps.yandex.ru/2.0/?load=package.standard,package.geoObjects&amp;lang=ru-RU&amp;apikey=2066e304-cee0-4ed2-9cb2-5f6521d5f96c"></script>
 					<script>
 						const map = document.querySelector('#map');
 						
@@ -797,7 +845,44 @@
 						
 						function init () {
 							//- var center = [55.75322550427434,37.65589449999999];
-							var center = [55.7529781840114,37.65581269262505];
+							var center = [55.803299806784906,37.59322146673064];
+							var myCircle = new ymaps.Circle([
+								// Координаты центра круга.
+								[55.803299806784906,37.59322146673064],
+								// Радиус круга в метрах.
+								100
+							], {
+								// Задаем опции круга.
+								// Включаем возможность перетаскивания круга.
+								draggable: true,
+								// Цвет заливки.
+								// Последний байт (77) определяет прозрачность.
+								// Прозрачность заливки также можно задать используя опцию "fillOpacity".
+								fillColor: "#DB709377",
+								// Цвет обводки.
+								strokeColor: "#990066",
+								// Прозрачность обводки.
+								strokeOpacity: 0.8,
+								// Ширина обводки в пикселях.
+								strokeWidth: 5
+							});
+							//- var myCircle2 = new ymaps.Circle([
+							//- 	// Координаты центра круга.
+							//- 	[55.803299806784906,37.59322146673064],
+							//- 	// Радиус круга в метрах.
+							//- 	10
+							//- ], {
+							//- 	// Задаем опции круга.
+							//- 	// Включаем возможность перетаскивания круга.
+							//- 	draggable: false,
+							//- 	// Цвет заливки.
+							//- 	// Последний байт (77) определяет прозрачность.
+							//- 	// Прозрачность заливки также можно задать используя опцию "fillOpacity".
+							//- 	fillColor: "#FF8651",
+							//- 	fillOpacity: '1',
+							//- 	strokeWidth: 0
+							//- });
+							// Добавляем круг на карту.
 							var myMap = new ymaps.Map("map", {
 											center: center,
 											zoom: 17
@@ -817,42 +902,9 @@
 											//- iconImageOffset: [-74, -76]
 											//- [-38, -76]
 									});
-							myMap.behaviors.disable('scrollZoom');
-							var myCircle = new ymaps.Circle([
-								// Координаты центра круга.
-								[55.7529781840114,37.65581269262505],
-								// Радиус круга в метрах.
-								100
-							], {
-								// Задаем опции круга.
-								// Включаем возможность перетаскивания круга.
-								draggable: false,
-								// Цвет заливки.
-								// Последний байт (77) определяет прозрачность.
-								// Прозрачность заливки также можно задать используя опцию "fillOpacity".
-								fillColor: "#FF865130",
-								//- fillOpacity: '0.3',
-								strokeWidth: 0
-							});
-							var myCircle2 = new ymaps.Circle([
-								// Координаты центра круга.
-								[55.7529781840114,37.65581269262505],
-								// Радиус круга в метрах.
-								10
-							], {
-								// Задаем опции круга.
-								// Включаем возможность перетаскивания круга.
-								draggable: false,
-								// Цвет заливки.
-								// Последний байт (77) определяет прозрачность.
-								// Прозрачность заливки также можно задать используя опцию "fillOpacity".
-								fillColor: "#FF8651",
-								//- fillOpacity: '0.3',
-								strokeWidth: 0
-							});
-							// Добавляем круг на карту.
 							myMap.geoObjects.add(myCircle);
-							myMap.geoObjects.add(myCircle2);
+							//- myMap.geoObjects.add(myCircle2);
+							myMap.behaviors.disable('scrollZoom');
 							//на мобильных устройствах... (проверяем по userAgent браузера)
 							if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){
 							//... отключаем перетаскивание карты
