--- a/public/022-connection-of-equipment.html
+++ b/public/022-connection-of-equipment.html
@@ -27,6 +27,17 @@
 					</ul>
 					<button class="catalog-btn catalog-btn-js mb-4" type="button"><span class="catalog-btn__c-img"><img loading="lazy" src="img/svg/catalog.svg" alt=""/></span><span>Каталог</span>
 					</button>
+					<div class="menu-mobile__workTime"><span>Время работы</span>
+						<svg class="icon icon-dots ">
+							<use xlink:href="img/svg/sprite.svg#dots"></use>
+						</svg>
+						<div class="menu-mobile__workTime-content">
+							<svg class="icon icon-alert ">
+								<use xlink:href="img/svg/sprite.svg#alert"></use>
+							</svg><span>Ежедневно: с 10 до 21</span>
+							<p>c 31 декабря по 2 января магазин не работает</p>
+						</div>
+					</div>
 					<div class="menu-mobile__address mb-4">ул.Складочная д.1, стр.9
 					</div>
 					<!--+topNavSearch('mb-4')--><a class="menu-mobile__tel" href="#">8 (800) 775-82-72</a><a class="menu-mobile__order-call link-modal-js" href="#modal-call">Заказать звонок</a>
@@ -71,6 +82,19 @@
 									<li class="menu-item"><a href="#">Доставка и оплата</a></li>
 									<li class="menu-item"><a href="#">Контакты</a></li>
 								</ul>
+							</div>
+							<div class="col-auto d-none d-xl-block">
+								<div class="topLine__workTime"><span>Время работы</span>
+									<svg class="icon icon-dots ">
+										<use xlink:href="img/svg/sprite.svg#dots"></use>
+									</svg>
+									<div class="topLine__workTime-content">
+										<svg class="icon icon-alert ">
+											<use xlink:href="img/svg/sprite.svg#alert"></use>
+										</svg><span>Ежедневно: с 10 до 21</span>
+										<p>c 31 декабря по 2 января магазин не работает</p>
+									</div>
+								</div>
 							</div>
 							<div class="col-auto">
 								<div class="topLine__address">ул.Складочная д.1, стр.9
