--- a/public/026-terms-of-sale.html
+++ b/public/026-terms-of-sale.html
@@ -72,6 +72,19 @@
 									<li class="menu-item"><a href="#">Контакты</a></li>
 								</ul>
 							</div>
+							<div class="col-auto d-none d-xl-block">
+								<div class="topLine__workTime"><span>Время работы</span>
+									<svg class="icon icon-dots ">
+										<use xlink:href="img/svg/sprite.svg#dots"></use>
+									</svg>
+									<div class="topLine__workTime-content">
+										<svg class="icon icon-alert ">
+											<use xlink:href="img/svg/sprite.svg#alert"></use>
+										</svg><span>Ежедневно: с 10 до 21</span>
+										<p>c 31 декабря по 2 января магазин не работает</p>
+									</div>
+								</div>
+							</div>
 							<div class="col-auto">
 								<div class="topLine__address">ул.Складочная д.1, стр.9
 								</div>
